[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/Milky Coffee.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/true-crimes.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Effects/Textbox.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/TextBox.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 450, 286 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unpause" type="Button" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -258.0
margin_right = 216.0
margin_bottom = 240.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -282.0
margin_right = 216.0
margin_bottom = 271.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 362.0
margin_top = 81.0
margin_right = 662.0
margin_bottom = 519.0
rect_min_size = Vector2( 300, 400 )

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 70.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][wave]PAUSED"
text = "PAUSED"
fit_content_height = true

[node name="Space" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 300.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 10 )

[node name="OptionsList" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 300.0
margin_bottom = 302.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/OptionsList"]
margin_right = 300.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Options"
align = 1

[node name="Space" type="Control" parent="CenterContainer/VBoxContainer/OptionsList"]
margin_top = 28.0
margin_right = 300.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 10 )

[node name="NarratorButton" type="CheckButton" parent="CenterContainer/VBoxContainer/OptionsList"]
margin_top = 42.0
margin_right = 300.0
margin_bottom = 82.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Narrator"

[node name="StorytextButton" type="CheckButton" parent="CenterContainer/VBoxContainer/OptionsList"]
margin_top = 86.0
margin_right = 300.0
margin_bottom = 126.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Storytext visible"

[node name="AbilityZoomButton" type="CheckButton" parent="CenterContainer/VBoxContainer/OptionsList"]
margin_top = 130.0
margin_right = 300.0
margin_bottom = 170.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Zoom in during ability"

[node name="AbilityCatchphraseButton" type="CheckButton" parent="CenterContainer/VBoxContainer/OptionsList"]
margin_top = 174.0
margin_right = 300.0
margin_bottom = 214.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Show catchphrase during ability"

[node name="Space2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 306.0
margin_right = 300.0
margin_bottom = 316.0
rect_min_size = Vector2( 0, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoToPage" type="Control" parent="CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.717647 )
margin_top = 320.0
margin_right = 300.0
margin_bottom = 370.0
rect_min_size = Vector2( 100, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="CenterContainer/VBoxContainer/GoToPage"]
visible = false
show_behind_parent = true
anchor_left = 0.171617
anchor_top = 0.313953
anchor_right = 1.24752
anchor_bottom = 0.546512
margin_left = -52.0
margin_top = -27.0
margin_right = 848.0
margin_bottom = 204.0
grow_horizontal = 2
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )
region_rect = Rect2( 56.1826, 76.4531, 1372.2, 1378.51 )
patch_margin_left = 59
patch_margin_top = 61
patch_margin_right = 49
patch_margin_bottom = 64
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/GoToPage"]
anchor_left = 0.0330033
anchor_top = 0.127907
anchor_right = 1.43894
anchor_bottom = 0.581395
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GoToPage/HBoxContainer"]
margin_top = 3.0
margin_right = 160.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = " Select page number:  "

[node name="SpinBox" type="SpinBox" parent="CenterContainer/VBoxContainer/GoToPage/HBoxContainer"]
margin_left = 164.0
margin_right = 238.0
margin_bottom = 24.0
min_value = 1.0
max_value = 83.0
page = 1.0
value = 1.0

[node name="GoToPage" type="Button" parent="CenterContainer/VBoxContainer/GoToPage/HBoxContainer"]
margin_left = 242.0
margin_right = 279.0
margin_bottom = 24.0
text = "GO!"

[node name="RestartLevel" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 374.0
margin_right = 300.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 30 )
text = "Restart level"

[node name="QuitGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 408.0
margin_right = 300.0
margin_bottom = 438.0
rect_min_size = Vector2( 0, 30 )
text = "Quit"

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
show_behind_parent = true
anchor_left = 0.320313
anchor_top = 0.09
anchor_right = 0.680664
anchor_bottom = 0.91
margin_top = -3.8147e-06
margin_right = 1107.0
margin_bottom = 1476.0
grow_horizontal = 2
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )
region_rect = Rect2( 56.1826, 76.4531, 1372.2, 1378.51 )
patch_margin_left = 59
patch_margin_top = 51
patch_margin_right = 49
patch_margin_bottom = 64
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="button_down" from="Unpause" to="." method="_on_Unpause_button_down"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/OptionsList/NarratorButton" to="." method="_on_NarratorButton_toggled"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/OptionsList/StorytextButton" to="." method="_on_StorytextButton_toggled"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/OptionsList/AbilityZoomButton" to="." method="_on_AbilityZoomButton_toggled"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/OptionsList/AbilityCatchphraseButton" to="." method="_on_AbilityCatchphraseButton_toggled"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GoToPage/HBoxContainer/GoToPage" to="." method="_on_GoToPage_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartLevel" to="." method="_on_RestartLevel_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
